--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- ЗАДАНИЕ -->
     <!-- Необходимо создать html-элементы там, где это нужно, в соответствии с правилами семантической разметки -->
-    <!-- ⚠️ Атрибут data-cy удалять нельзя! Он учавствует в проверке. Если его удалить, тесты не пройдут. -->
+    <!-- ⚠️ Атрибут data-cy удалять нельзя! Он участвует в проверке. Если его удалить, тесты не пройдут. -->
 
     <header>
         <span>IT-INCUBATOR</span>
@@ -18,23 +18,51 @@
         <!-- 1) В этом разделе создай 3 дочерних элемента: -->
 
         <!-- a) Заголовок первого уровня со своим ФИО -->
-        <!-- b) Несколько строк о себе: где учишься или работаешь, хобби, увлечения. Используй тег для абзаца. Длина строки должна быть больше 50-ти симвов (пробелы и др знаки припинания тоже считаются символом) -->
+        <h1>Ивченко Семён</h1>
+        <!-- b) Несколько строк о себе: где учишься или работаешь, хобби, увлечения. Используй тег для абзаца. Длина строки должна быть больше 50-ти символов (пробелы и др знаки препинания тоже считаются символом) -->
+        <p>Прохожу обучение в IT-Инкубаторе, работаю мастером по просмотру фильмов и сериалов.</p>
+        <p>Из хобби пожалуй отмечу: бег, волейбол, чтение, шахматы!  </p>
         <!-- c) Фото (или любую картинку из интернета). Не забудь добавить описание на случай, если изображение не загрузится -->
+        <img src="https://media.istockphoto.com/id/1484200613/ru/%D1%84%D0%BE%D1%82%D0%BE/%D0%B2%D0%B8%D0%B4-%D1%81-%D0%B2%D0%BE%D0%B7%D0%B4%D1%83%D1%85%D0%B0-%D0%BD%D0%B0-%D1%84%D0%BB%D0%BE%D1%82-%D0%B2%D0%BE%D0%B7%D0%B4%D1%83%D1%88%D0%BD%D1%8B%D1%85-%D1%88%D0%B0%D1%80%D0%BE%D0%B2-%D0%B2-%D0%BA%D0%B0%D0%BF%D0%BF%D0%B0%D0%B4%D0%BE%D0%BA%D0%B8%D0%B8-%D1%82%D1%83%D1%80%D1%86%D0%B8%D1%8F.jpg?s=612x612&w=0&k=20&c=_gr7iqjXgGwX4hOFxFxgjmiXJt-qnFGHqNh5S1_brq8=" alt="Каппадокия">
     </section>
 
     <section data-cy="hw1-section-about-pre">
         <!-- 2) В этом разделе создай выпадающий список с разными городами (не меньше 3-х). Свой город сделай вторым в этом списке. С помощью специального атрибута, сделай так, чтобы твой город всегда был выбранным по умолчанию  -->
+        <select>
+
+            <option >Москва</option>
+            <option selected >Тирасполь</option>
+            <option >Казань</option>
+            <option >Краснодар</option>
+            <option >Санкт-Петербург</option>
+            <option >Нижний Новгород</option>
+        </select>
         <div data-cy="hw1-unordered-list-box-pre">
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
             <!-- a) Заголовок 2-го уровня (любимые книги/фильмы/блюда/страны... и т.п.) -->
+            <h2>Хочу посетить</h2>
             <!-- b) Маркированный список. В списке должно быть не менее 3-х элементов -->
+            <ul>
+                <li>Япония</li>
+                <li>Китай</li>
+                <li>Норвегия</li>
+                <li>Исландия</li>
+                <li>Швеция</li>
+            </ul>
         </div>
         <div data-cy="hw1-ordered-list-box-pre">
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
             <!-- a) Заголовок 2-го уровня с другим названием (любимые книги/фильмы/блюда/страны... и т.п.) -->
+            <h2>Где уже был</h2>
             <!-- b) Нумерованный (упорядоченный) список. В списке должно быть не менее 3-х элементов -->
+            <ol>
+                <li>Россия</li>
+                <li>Украина</li>
+                <li>Молдова</li>
+                <li>Англия</li>
+            </ol>
         </div>
         <div data-cy="hw1-skills-box-pre">
             <h2>Мои скиллы</h2>
@@ -42,20 +70,71 @@
                 - В подписи укажи названия любых тем по верстке (все, что знаешь или слышал). 
                 - Каждый чекбокс должен быть связан со своей подписью. Для этого чекбокс должен находиться в элементе для подписи
                 - Отметь "галочкой" (с помощью специального атрибута) темы, которые ты уже знаешь. -->
+            <label for="html">
+                <input id="html" type="checkbox" name="html" checked>
+                HTML
+            </label>
+            <label for="css">
+                <input id="css" type="checkbox" name="css" checked>
+                CSS
+            </label>
+            <label for="react">
+                <input id="react" type="checkbox" name="react" >
+                React
+            </label>
+            <label for="js">
+                <input id="js" type="checkbox" name="js" >
+                JS
+            </label>
+            <label for="angular">
+                <input id="angular" type="checkbox" name="angular" >
+                Angular
+            </label>
+
         </div>
         <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
         <!-- 6) Создай здесь кнопку “Добавить” -->
         <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
+        <textarea placeholder="Новый скилл"></textarea>
+        <button>Добавить</button>
         
         <table data-cy="hw-about-table-pre">
+            <table>
             <!-- 8) В таблице сделай 5 строк и 3 столбца. 
                         - В первой строке ячейки заголовков, в остальных обычные ячейки
                         - Добавь границы для всей таблицы с помощью специального атрибута border="". Он устарел, но работает
                         - В последнем ряду первая ячейка должна занимать 2 столбца (как должно выглядеть - смотри образец). Таблицу можно заполнять любыми данными -->
+            <tr>
+                <th>Страна/Направление</th>
+                <th>Фронт</th>
+                <th>Бэк</th>
+            </tr>
+            <tr>
+                <th>Россия</th>
+                <th>1100$</th>
+                <th>1400$</th>
+            </tr>
+            <tr>
+                <th>Белорусь</th>
+                <th>1200$</th>
+                <th>1350$</th>
+            </tr>
+            <tr>
+                <th>Польша</th>
+                <th>1000$</th>
+                <th>1600$</th>
+            </tr>
+            <tr>
+                <th>США</th>
+                <th>1800$</th>
+                <th>2200$</th>
+            </tr>
+            </table>
         </table>
     </section>
     <footer data-cy="hw-footer-pre">
         <!-- 9) Создай здесь ссылку на наш сайт https://it-incubator.io/ (текст ссылки должен быть it-incubator) -->
+        <a href="https://it-incubator.io/ ">it-incubator</a>
     </footer>
 </body>
 </html>
