--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>It-incubator precourse</title>
+    <style>
+         table{
+             border: 1px solid black;
+         }
+         td,th{
+             border: 1px solid black;
+             text-align: left;
+         }
+
+
+    </style>
 </head>
 <body>
     <!-- ЗАДАНИЕ -->
@@ -99,7 +110,6 @@
         <button>Добавить</button>
         
         <table data-cy="hw-about-table-pre">
-            <table>
             <!-- 8) В таблице сделай 5 строк и 3 столбца. 
                         - В первой строке ячейки заголовков, в остальных обычные ячейки
                         - Добавь границы для всей таблицы с помощью специального атрибута border="". Он устарел, но работает
@@ -125,11 +135,9 @@
                 <th>1600$</th>
             </tr>
             <tr>
-                <th>США</th>
-                <th>1800$</th>
+                <th colspan="2">США</th>
                 <th>2200$</th>
             </tr>
-            </table>
         </table>
     </section>
     <footer data-cy="hw-footer-pre">
