--- a/index.html
+++ b/index.html
@@ -106,10 +106,11 @@
         <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
         <!-- 6) Создай здесь кнопку “Добавить” -->
         <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
-        <textarea placeholder="Новый скилл"></textarea>
+        <input type="text" placeholder="Новый скилл"></input>
         <button>Добавить</button>
+        <hr>
         
-        <table data-cy="hw-about-table-pre">
+        <table data-cy="hw-about-table-pre" border="1">
             <!-- 8) В таблице сделай 5 строк и 3 столбца. 
                         - В первой строке ячейки заголовков, в остальных обычные ячейки
                         - Добавь границы для всей таблицы с помощью специального атрибута border="". Он устарел, но работает
@@ -120,23 +121,23 @@
                 <th>Бэк</th>
             </tr>
             <tr>
-                <th>Россия</th>
-                <th>1100$</th>
-                <th>1400$</th>
+                <td>Россия</td>
+                <td>1100$</td>
+                <td>1400$</td>
             </tr>
             <tr>
-                <th>Белорусь</th>
-                <th>1200$</th>
-                <th>1350$</th>
+                <td>Белорусь</td>
+                <td>1200$</td>
+                <td>1350$</td>
             </tr>
             <tr>
-                <th>Польша</th>
-                <th>1000$</th>
-                <th>1600$</th>
+                <td>Польша</td>
+                <td>1000$</td>
+                <td>1600$</td>
             </tr>
             <tr>
-                <th colspan="2">США</th>
-                <th>2200$</th>
+                <td colspan="2">США</td>
+                <td>2200$</td>
             </tr>
         </table>
     </section>
